# tui_sudoku

./: .gitignore  CODE_QUALITY_ANALYSIS.md  STRATEGY_PATTERN_IMPLEMENTATION.md  pyproject.toml  pytest.ini
docs/: DEVELOPMENT.md  EMACS_SETUP.md  INFRASTRUCTURE_SUMMARY.md  README.md  SPIELANLEITUNG.md  USAGE_EXAMPLES.md  infrastructure_verification.txt
src/sudoku/: __init__.py  main.py  sudoku.css
src/sudoku/application/: __init__.py
src/sudoku/application/dto/: __init__.py  game_state.py  statistics_dto.py
src/sudoku/application/use_cases/: __init__.py  check_completion.py  get_statistics.py  make_move.py  start_new_game.py  update_statistics.py
src/sudoku/domain/: __init__.py
src/sudoku/domain/entities/: __init__.py  board.py  cell.py  game.py  player.py  statistics.py
src/sudoku/domain/protocols/: __init__.py  board_generator.py  board_solver.py  board_validator.py  repository.py
src/sudoku/domain/services/: __init__.py  game_rules.py
src/sudoku/domain/strategies/: __init__.py  validation_strategies.py  validation_strategy.py
src/sudoku/domain/value_objects/: __init__.py  board_size.py  cell_value.py  difficulty.py  position.py
src/sudoku/infrastructure/: __init__.py
src/sudoku/infrastructure/generators/: __init__.py  backtracking_generator.py
src/sudoku/infrastructure/persistence/: __init__.py  statistics_repository.py
src/sudoku/infrastructure/solvers/: __init__.py  backtracking_solver.py
src/sudoku/infrastructure/tui/: __init__.py  app.py  app.tcss
src/sudoku/infrastructure/tui/components/: __init__.py  board_widget.py  status_widget.py
src/sudoku/infrastructure/tui/helpers/: __init__.py  cursor_navigator.py  game_input_handler.py  game_state_manager.py
src/sudoku/infrastructure/tui/input/: __init__.py  key_mappings.py
src/sudoku/infrastructure/tui/renderers/: __init__.py  board_renderer.py  board_renderers.py
src/sudoku/infrastructure/tui/screens/: __init__.py  game_screen.py  menu_screen.py  player_input_screen.py  statistics_screen.py
src/sudoku/infrastructure/validators/: __init__.py  sudoku_validator.py
src/sudoku/presentation/: __init__.py
src/sudoku/presentation/controllers/: __init__.py  app_controller.py
tests/: conftest.py
tests/integration/: test_game_flow.py
tests/unit/application/: test_check_completion.py  test_make_move.py  test_start_new_game.py
tests/unit/domain/: test_board.py  test_board_size.py  test_cell.py  test_cell_value.py  test_difficulty.py  test_game.py  test_game_rules.py  test_position.py
tests/unit/infrastructure/: test_backtracking_generator.py  test_backtracking_solver.py  test_statistics_repository.py  test_sudoku_validator.py
